<resources>

    <string name="app_name">LineApp</string>

    <!--Main Activity-->
    <string name="main_activity_title">Welcome</string>
    <string name="create_your_formation">Create your formation</string>
    <string name="open_a_saved_formation">Open a saved formation</string>
    <string name="versus_mode">Versus mode</string>

    <string name="quit">Quit</string>

    <!--ChooseNumberOfPlayersActivity-->
    <string name="create_formation_title">Create a formation</string>
    <string name="select_number_of_players">Select the number of players</string>

    <!--ChooseFormationActivity-->
    <string name="basic_formation">Basic formation</string>

    <!--ChooseTshirtActivity-->
    <string name="pick_color">Pick a T-shirt</string>

    <!--ChooseTeamNameActivity-->
    <string name="choose_the_name_of_your_team">Choose the name of your team</string>
    <string name="hint_choose_the_name_of_your_team">For example: Chelsea</string>
    <string name="hint_choose_the_name_of_your_player">For example: Ronaldo</string>
    <string name="enter_team_name">Please enter Team name</string>

    <string name="player_tag">Player</string>

    <!--Single Player Activity-->
    <string name="enter_player_name">Please enter player name</string>
    <string name="exist_player_name">Entered player name is already exist</string>
    <string name="formation_name_exist">Formation already exist</string>
    <string name="please_enter_formation_name">Please enter formation name</string>
    <string name="rename_player">Rename player</string>

    <string name="substitute_player">Substitute a player</string>
    <string name="update_formation">Formation is updated successfully</string>
    <string name="q_update_formation">Do you want to save changes?</string>
    <string name="q_exit_versus_mode">Are you sure you want to exit?</string>
    <string name="q_delete_player">Do you want to delete this player?</string>
    <string name="q_formation_player">Do you want to delete this formation?</string>

    <!--Versus Menu Mode-->
    <string name="versus_mode_second">Create a second formation</string>
    <string name="new_formation">New formation</string>
    <string name="open_a_saved">Open a saved one</string>
    <string name="duplicate">Duplicate</string>
    <string name="back">Back</string>

    <!--Versuse Mode-->
    <string name="long_press_txt">Touch the field on the left and swipe right if you want to make changes to the team on your left \n\nTouch the field on the right and swipe left if you want to make changes to the team on your right \n\nLong press on a player to make a substitution to the opposite team.\n
    </string>
    <string name="check_text">Do not show again.</string>
    <!--Nav Drawer-->
    <string name="nav_main_menu">Main Menu</string>
    <string name="nav_open_a_saved">Open a saved one</string>
    <string name="nav_tell_friend">Tell a Friend</string>
    <string name="nav_exit">Exit</string>
    <string name="vs_replace">A player with same name already exists, please rename it</string>


    <!--menu-->
    <string name="menu_copy">Copy Text</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_delete_player">Delete Player</string>
    <string name="menu_substitute_player">Substitute Player</string>

    <!--Formation-->
    <string name="rename_formation">Rename formation</string>
    <string name="rename_duplicate_formation">Rename duplicate formation</string>

    <!--GIF-->
    <string name="fb_name">\@lineappft</string>


    <!--AD Mob-->
    <!--<string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="banner_home_footer">ca-app-pub-5380011668655597/7883216663</string>
    <!--<string name="interstitial_full_screen">ca-app-pub-3940256099942544/1033173712</string>-->
    <string name="interstitial_full_screen">ca-app-pub-5380011668655597/4510947867</string>

    <string name="share_by">Sent by LineApp: https://goo.gl/uOm5FW</string>
</resources>
