<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/ic_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <include layout="@layout/app_bar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_create_formation"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/tv_bg_solid"
            android:gravity="center"
            android:text="@string/create_your_formation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_open_formation"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/tv_bg_solid"
            android:gravity="center"
            android:text="@string/open_a_saved_formation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <!--

                    <TextView
                        android:id="@+id/tv_versus_mode"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/tv_bg_solid"
                        android:gravity="center"
                        android:text="@string/versus_mode"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
        -->

        <TextView
            android:id="@+id/tv_quit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/tv_bg_solid"
            android:gravity="center"
            android:text="@string/quit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:layout_gravity="bottom|center"
        android:id="@+id/av_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer">
    </com.google.android.gms.ads.AdView>


</FrameLayout>
