<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.mxi.lineapp.activity.SinglePlayerActivity">

    <include layout="@layout/app_bar_versus_single" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ExpandableListView
                android:id="@+id/lvExp"
                android:layout_weight="2.7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:cacheColorHint="#00000000"/>

            <FrameLayout
                android:id="@+id/fl_capture_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.3">

                <com.mxi.lineapp.dragevent.DragLayer
                    android:id="@+id/drag_layer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/ground_pattent" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right|bottom"
                    android:src="@mipmap/ic_launcher" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll_nav_view"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:visibility="gone">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <ImageView
                    android:padding="10dp"
                    android:src="@mipmap/main_menu"
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_nav_main_menu"
                    android:textColor="@color/colorWhite"
                    android:text="@string/nav_main_menu"
                    android:gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <ImageView
                    android:padding="10dp"
                    android:src="@mipmap/save"
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_nav_open_saved"
                    android:textColor="@color/colorWhite"
                    android:text="@string/nav_open_a_saved"
                    android:gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <ImageView
                    android:padding="10dp"
                    android:src="@mipmap/share"
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_nav_share"
                    android:textColor="@color/colorWhite"
                    android:text="@string/nav_tell_friend"
                    android:gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <ImageView
                    android:padding="10dp"
                    android:src="@mipmap/exit"
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_nav_quit"
                    android:textColor="@color/colorWhite"
                    android:text="@string/nav_exit"
                    android:gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
