<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_formation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.mxi.lineapp.activity.ChooseTeamName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ic_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:layout_weight="5.5"
            android:background="@drawable/bg_white"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:screenOrientation="landscape"
                    android:text="@string/choose_the_name_of_your_team"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/choose_name_rounded"
                android:gravity="center">

                <EditText
                    android:imeOptions="actionDone"
                    android:id="@+id/et_team_name"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:background="@null"
                    android:maxLength="15"
                    android:hint="@string/hint_choose_the_name_of_your_team"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:gravity="center|right">

                <ImageView
                    android:id="@+id/iv_ok"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|right"
                    android:background="@mipmap/check"
                    android:gravity="center|right" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/app_bar_main" />
    <com.google.android.gms.ads.AdView
        android:layout_gravity="bottom|center"
        android:id="@+id/av_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer">
    </com.google.android.gms.ads.AdView>
</FrameLayout>
